fix cut off icons and location

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -465,7 +465,7 @@ p.federation-id {
 }
 
 div.timeline-year {
-    margin-left:20px;
+    margin-left:17px;
 }
 
 div.timeline-block ul {
@@ -475,6 +475,8 @@ div.timeline-block ul {
 
 div.timeline-block li {
     padding-left:70px;
+    min-height: 65px;
+    padding-top: 3px;
 }
 
 /*---- Version Pages ---- */
